phpmyadmin-mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: phpmyadmin-mysql-pod
spec:
  containers:
  - name: mysql
    image: mysql:latest
    ports:
    - containerPort: 3306
  - name: phpmyadmin
    image: phpmyadmin/phpmyadmin:latest
    ports:
    - containerPort: 80
