phpmyadmin-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: phpmyadmin-pod
  labels:
    app: phpmyadmin
spec:
  containers:
  - name: phpmyadmin-container
    image: phpmyadmin/phpmyadmin
    ports:
    - containerPort: 80
